# sx127x

./: .gitignore  CMakeLists.txt  Kconfig  README.md  extra_script.py  idf_component.yml  library.json  library.properties  platformio.ini  release.sh  sonar-project.properties  sx1276.c  sx1276.h
.github/workflows/: examples.yml  main.yml
debug_registers/: CMakeLists.txt  README.md  main.c
examples/low_level/: CMakeLists.txt
examples/receive/: main.c
examples/receive_deepsleep/: main.c
include/: sx1272_registers.h  sx127x.h  sx127x_at.h  sx127x_registers.h  sx127x_spi.h
src/: CMakeLists.txt  sx1278.c  sx1278.h  sx127x.c  sx127x.h  sx127x_at.c  sx127x_esp_spi.c  sx127x_gd32_spi.c  sx127x_linux_spi.c  sx127x_stm32_spi.c
test/: CMakeLists.txt  sonar-project.properties  sx127x_mock_spi.c  sx127x_mock_spi.h  test_registers.c  test_sx127x.c
test/at_app/: CMakeLists.txt
test/at_app/main/: CMakeLists.txt  at_util.c  at_util.h  main.c  uart_at.c  uart_at.h
test/test_app/: .gitignore  CMakeLists.txt  pom.xml  pytest_fsk.py  pytest_lora.py  pytest_ook.py  pytest_sx127x_basic.py
test/test_app/components/sx127x/: CMakeLists.txt  Kconfig
test/test_app/main/: CMakeLists.txt  main.c  sx127x_fixture.c  sx127x_fixture.h  test_fsk.c  test_lora.c  test_registers.c  test_registers.h
test/test_app/src/test/java/com/leosatdata/sx127x/: AddressConfig.java  AvgMode.java  CollisionConfig.java  DataShaping.java  FhssConfig.java  FskDataShaping.java  FskTest.java  LoraTest.java  OokDataShaping.java  OokTest.java  OpMode.java  PaConfig.java  PacketFormat.java  PeakMode.java  PreambleConfig.java  RssiConfig.java  Sx127x.java  sx127x_address_filtering_t.java  sx127x_cr_t.java  sx127x_crc_type_t.java  sx127x_frame_t.java  sx127x_fsk_data_shaping_t.java  sx127x_implicit_header_t.java  sx127x_mode_t.java  sx127x_modulation_t.java  sx127x_ook_avg_offset_t.java  sx127x_ook_avg_thresh_t.java  sx127x_ook_data_shaping_t.java  sx127x_ook_peak_thresh_dec_t.java  sx127x_ook_peak_thresh_step_t.java  sx127x_ook_thresh_type_t.java  sx127x_pa_pin_t.java  sx127x_pa_ramp_t.java  sx127x_packet_encoding_t.java  sx127x_packet_format_t.java  sx127x_preamble_type_t.java  sx127x_rssi_smoothing_t.java  sx127x_rx_trigger_t.java  sx127x_tx_header_t.java
test/test_app/src/test/resources/: logging.properties
(+78 files in other folders)
